# flat-code-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: build.yml  wheels.yml
Baked/: Preprocessor.cpp  Preprocessor.hpp  StringPool.cpp  StringPool.hpp  SymbolBaker.cpp  SymbolBaker.hpp
Baked/Component/: Components.hpp
Baked/Data/: BakedEdge.hpp  BakedSymbol.hpp
Baked/Handlers/: CSharpHandlers.cpp  CSharpHandlers.hpp  CommonHandlers.cpp  CommonHandlers.hpp  CppHandlers.cpp  CppHandlers.hpp  GoHandlers.cpp  GoHandlers.hpp  HandlerSet.hpp  JavaHandlers.cpp  JavaHandlers.hpp  JsTsHandlers.cpp  JsTsHandlers.hpp  PythonHandlers.cpp  PythonHandlers.hpp  RustHandlers.cpp  RustHandlers.hpp
Baked/Store/: SymbolStore.cpp  SymbolStore.hpp
Baked/System/: BakeSystem.cpp  BakeSystem.hpp
Core/: BakeOrchestrator.cpp  BakeOrchestrator.hpp  DensityEvaluator.cpp  DensityEvaluator.hpp  FceEngine.cpp  FceEngine.hpp  IFceObject.hpp  QueryEngine.hpp  QuerySystem.cpp  QuerySystem.hpp
Symbol/: DensityConfig.hpp  RelationKind.hpp
bindings/: fce_module.cpp
fce_cli/: __init__.py  __main__.py  _cli.py
