[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "flat-code-engine"
version = "1.0.0"
description = "In-memory code graph engine - 10 languages, 7.9M symbols, 0.19ms query"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "leejo" },
]
keywords = ["code-analysis", "tree-sitter", "symbol-graph", "rag", "ai-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/leejo-fce/flat-code-engine"
Repository = "https://github.com/leejo-fce/flat-code-engine"
Issues = "https://github.com/leejo-fce/flat-code-engine/issues"

[project.scripts]
fce = "fce_cli:main"

[tool.scikit-build]
cmake.args = ["-DFCE_BUILD_BINDINGS=ON", "-DCMAKE_POSITION_INDEPENDENT_CODE=ON", "-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF"]
wheel.packages = ["fce_cli"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
FCE_BUILD_BINDINGS = "ON"
FCE_BUILD_TESTS = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_i686 *-win32"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
